tests/semantic/invalid/invalid_assignment.mc
int value = 1;
// The assignment remains on line 4 after a blank line.

value = true;
